--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "license": "MIT",
   "devDependencies": {
     "@vuepress/plugin-medium-zoom": "^1.9.7",
-    "vuepress": "^1.9.7",
-    "vuepress-plugin-nuggets-style-copy": "^1.0.3"
+    "vuepress": "^1.9.7"
   },
   "scripts": {
     "docs:dev": "vuepress dev docs",
@@ -14,6 +13,8 @@
     "eject": "vuepress eject"
   },
   "dependencies": {
-    "markdown-it-container": "^3.0.0"
+    "@vuepress/plugin-register-components": "^2.0.0-beta.51",
+    "markdown-it-container": "^3.0.0",
+    "vuepress-plugin-code-copy": "^1.0.6"
   }
 }
