--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "license": "MIT",
   "devDependencies": {
     "@vuepress/plugin-medium-zoom": "^1.9.7",
+    "@vuepress/plugin-search": "^1.9.7",
+    "sass": "^1.54.9",
+    "sass-loader": "^13.0.2",
     "vuepress": "^1.9.7"
   },
   "scripts": {
@@ -13,7 +16,7 @@
     "eject": "vuepress eject"
   },
   "dependencies": {
-    "@vuepress/plugin-register-components": "^2.0.0-beta.51",
+    "@vuepress/plugin-last-updated": "^1.9.7",
     "markdown-it-container": "^3.0.0",
     "vuepress-plugin-code-copy": "^1.0.6"
   }
